[package]
name = "serde_xp_protocol"
version = "0.1.0"
authors = ["VKint <kint@xp.network>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_bytes = "0.11"
bitfield = "0.13"

[dev-dependencies]
serde_json = "1"
hex = "0.4"
