[package]
name = "serde_xp_protocol"
version = "0.1.0"
authors = ["VKint <kint@xp.network>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
bincode = "1.3"
bitfield = "0.13"
thiserror = "1.0"

[dev-dependencies]
serde_json = "1"
hex = "0.4"
